# 2048-CPP-AI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Libraries/include/libtorch/ATen/: CompositeExplicitAutogradFunctions_inl.h  Functions.h  MethodOperators.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
Libraries/include/libtorch/ATen/core/: TensorBody.h  aten_interned_strings.h
Libraries/include/libtorch/ATen/ops/: _flash_attention_forward.h  _flash_attention_forward_cuda_dispatch.h  _flash_attention_forward_native.h  _flash_attention_forward_ops.h  _fused_sdp_choice_native.h  _scaled_dot_product_attention_math.h  _scaled_dot_product_attention_math_compositeimplicitautograd_dispatch.h  _scaled_dot_product_attention_math_native.h  _scaled_dot_product_attention_math_ops.h  _scaled_dot_product_flash_attention.h  _scaled_dot_product_flash_attention_cuda_dispatch.h  _scaled_dot_product_flash_attention_native.h  _scaled_dot_product_flash_attention_ops.h
src/: 2048-AI.cpp  main.cpp
src/AI/Controllers/DQN/: DQN.cpp  Device.cpp  EpsilonAdaptiveGreedy.cpp  ExperienceReplay.cpp  Model.cpp
src/AI/Controllers/Expectimax/: Expectimax.cpp
src/include/: 2048-AI.h
src/include/AI/: Device.h
src/include/AI/Controllers/DQN/: DQN.h  EpsilonAdaptiveGreedy.h  ExperienceReplay.h  Model.h
src/include/AI/Controllers/Expectimax/: Expectimax.h
